[package]
name = "python_comm_macros"
version = "0.2.0"
authors = ["wugifer <wugifer@>"]
edition = "2018"
description = "proc macros for python_comm"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wugifer/python-comm-macros"
documentation = "https://docs.rs/python-comm-macros/"

[dependencies]
proc-macro2 = { version = "~1.0" }
quote       = { version = "~1.0" }
syn         = { version = "~1.0", features = [ "full" ] }

[lib]
proc-macro = true
